--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -1,4 +1,4 @@
-#waterfall {
-    background-image: url("./images/waterfall.jpg");
+ {
+    background-image: url("../../images/waterfall.jpg");
   }
   
