--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -1,4 +1,39 @@
- {
-    background-image: url("../../images/waterfall.jpg");
-  }
-  
+body {
+  background-image: url("../../images/waterfall.jpg");
+}
+
+h1 {
+  text-align: right;
+  font-family: "Kalam", cursive;
+  font-size: 90px;
+  color: lightblue;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+p {
+  text-align: right;
+  font-family: "Kalam", cursive;
+  font-size: 40px;
+  color: lightblue;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.loginForm {
+  text-align: center;
+  font-family: "Kalam", cursive;
+  font-size: 40px;
+  color: darkred;
+}
+
+.btn {
+  text-align: center;
+  font-family: "Kalam", cursive;
+  color: darkred;
+  font-size: 20px;
+}
+
+.input {
+  font-family: "Kalam", cursive;
+  color: darkred;
+  font-size: 20px;
+}
