--- a/client/src/components/create-user/create_user.css
+++ b/client/src/components/create-user/create_user.css
@@ -1,17 +1,24 @@
 
 body {
     background-image: url("../../images/waterfall.jpg");
+
    }
 
    
    #createuser {
     position: absolute;
-    top: 25vh;
+    top: 35vh;
     left: 30vw;
     right: 30vw;
-    bottom: 8vw;
+    bottom: 9vw;
     background-color: rgba(255,255,255,0.5);
     text-align: center;
     padding: 20px;
-    z-index: 9
+    z-index: 9;
+    font-family: "Kalam", cursive;
+    color: rgb(202, 41, 41);
+  }
+
+  #createuser:hover {
+    box-shadow: 0 10px 18px 0 rgba(0, 0, 0, 0.24),0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
