--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -1,6 +1,22 @@
 
 body {
-  background-image: url("../../images/waterfall.jpg");
+  background-image:url("../../images/waterfall.jpg");
+}
+
+#loginaside {
+  position: absolute;
+  top: 40vh;
+  left: 25vw;
+  right: 25vw;
+  bottom: 12vw;
+  background-color: rgba(255,255,255,0.5);
+  text-align: center;
+  padding: 20px;
+  z-index: 9
+}
+
+#loginaside:hover {
+  box-shadow: 0 10px 18px 0 rgba(0, 0, 0, 0.24),0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 h1 {
@@ -11,6 +27,7 @@ h1 {
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
+
 p {
   text-align: right;
   font-family: "Kalam", cursive;
@@ -20,9 +37,8 @@ p {
 }
 
 .loginForm {
-  text-align: center;
   font-family: "Kalam", cursive;
-  font-size: 40px;
+  font-size: 25px;
   color: darkred;
 }
 
@@ -31,6 +47,11 @@ p {
   font-family: "Kalam", cursive;
   color: darkred;
   font-size: 20px;
+  margin-left: 20px !important;
+}
+
+.btn:hover {
+  box-shadow: 0 10px 18px 0 rgba(0, 0, 0, 0.24),0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .input {
