--- a/client/src/components/main-stats/main_stats.css
+++ b/client/src/components/main-stats/main_stats.css
@@ -2,3 +2,32 @@ body {
     background-image: url("../../images/waterfall.jpg");
   }
   
+#mainContainer {
+  margin-top: 20vh;
+ 
+}
+
+#mainCard {
+  background-color: rgba(255,255,255,0.5);
+    text-align: center;
+    padding: 20px;
+    z-index: 9;
+    font-family: "Kalam", cursive;
+    color: rgb(0, 48, 14);
+  }
+
+  #userInfo {
+    color: lightblue;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  }
+
+  img {
+    width: 150px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+#mainCard:hover{
+  box-shadow: 0 10px 18px 0 rgba(0, 0, 0, 0.24),0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
