--- a/client/src/components/main-stats/main_stats.css
+++ b/client/src/components/main-stats/main_stats.css
@@ -21,7 +21,7 @@ body {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   }
 
-  img {
+  #character {
     width: 150px;
     display: block;
     margin-left: auto;
