--- a/client/src/components/main-stats/main_stats.css
+++ b/client/src/components/main-stats/main_stats.css
@@ -1,11 +1,11 @@
-body {
+/* body {
     background-image: url("/images/waterfall.jpg");
-  }
+  } */
   
-#mainContainer {
+/* #mainContainer {
   margin-top: 20vh;
  
-}
+} */
 
 #mainCard {
   background-color: rgba(255,255,255,0.5);
@@ -14,6 +14,19 @@ body {
     z-index: 9;
     font-family: "Kalam", cursive;
     color: rgb(0, 48, 14);
+    margin-top: 10vh;
+  }
+
+  #houseMembers {
+    background-color: rgba(255,255,255,0.5);
+    text-align: center;
+    padding: 20px;
+    z-index: 9;
+    font-family: "Kalam", cursive;
+    color: rgb(0, 48, 14);
+    margin-top: 5vh;
+    margin-bottom: 10vh;
+
   }
 
   #userInfo {
