changed the background for the fight page

--- a/client/src/components/fight/fight.css
+++ b/client/src/components/fight/fight.css
@@ -1,7 +1,12 @@
+#fightContainer {
+    margin-top:100px;
+    margin-bottom: 50vh
+}
+
 .fighters {
     border: 1px red solid
 }
 
 #fightBtn {
-    margin-bottom: 40vh
+    margin-top: 35vh
 }
