--- a/client/src/components/create-user/create_user.css
+++ b/client/src/components/create-user/create_user.css
@@ -1,10 +1,3 @@
-
-/* body {
-    background-image: url("/images/waterfall.jpg");
-
-   } */
-
-   
    #createuser {
     position: absolute;
     top: 35vh;
@@ -21,4 +14,16 @@
 
   #createuser:hover {
     box-shadow: 0 10px 18px 0 rgba(0, 0, 0, 0.24),0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+
+  @media only screen and (max-width: 600px) {
+    #createuser {
+      position: absolute;
+      top: 20vh;
+      left: 10vw;
+      right: 10vw;
+      bottom: 20vw;
+      padding: 20px;
+      z-index: 9;
+    } 
   }
