--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -1,8 +1,3 @@
-/* 
-body {
-  background-image:url("/images/waterfall.jpg");
-} */
-
 #loginaside {
   position: absolute;
   top: 40vh;
@@ -60,3 +55,23 @@ p {
   font-size: 20px;
 }
 
+@media only screen and (max-width: 600px) {
+ h1 {
+   padding-top: 20px; 
+   font-size: 30px;
+ }
+ p {
+  font-size: 30px;
+ }
+ #loginaside {
+  position: absolute;
+  top: 35vh;
+  left: 15vw;
+  right: 15vw;
+  bottom: 50vw;
+}
+.btn {
+  font-size: 13px;
+  margin-left: 20px !important;
+}
+}
