--- a/client/src/components/main-stats/main_stats.css
+++ b/client/src/components/main-stats/main_stats.css
@@ -1,41 +1,49 @@
 #mainCard {
-  background-color: rgba(255,255,255,0.5);
-    text-align: center;
-    padding: 20px;
-    z-index: 9;
-    font-family: "Kalam", cursive;
-    color: rgb(0, 48, 14);
-    margin-top: 10vh;
-  }
-  
-h6{
-  margin-bottom: 3px
+  background-color: rgba(255, 255, 255, 0.5);
+  text-align: center;
+  padding: 20px;
+  z-index: 9;
+  font-family: "Kalam", cursive;
+  color: rgb(0, 48, 14);
+  margin-top: 10vh;
 }
-  #houseMembers {
-    background-color: rgba(255,255,255,0.5);
-    text-align: center;
-    padding: 20px;
-    z-index: 9;
-    font-family: "Kalam", cursive;
-    color: rgb(0, 48, 14);
-    margin-top: 5vh;
-    margin-bottom: 30vh;
-    overflow-y: scroll;
-  }
- 
 
-  #userInfo {
-    color: lightblue;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  }
+.logoutBtn {
+  float: right;
+}
 
-  #character {
-    width: 150px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
+h6 {
+  margin-bottom: 3px;
+}
+#houseMembers {
+  background-color: rgba(255, 255, 255, 0.5);
+  text-align: center;
+  padding: 20px;
+  z-index: 9;
+  font-family: "Kalam", cursive;
+  color: rgb(0, 48, 14);
+  margin-top: 5vh;
+  margin-bottom: 30vh;
+  overflow-y: scroll;
+}
 
-#mainCard:hover{
-  box-shadow: 0 10px 18px 0 rgba(0, 0, 0, 0.24),0 6px 20px 0 rgba(0, 0, 0, 0.19);
+li {
+  list-style-type: none;
+}
+
+#userInfo {
+  color: lightblue;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+#character {
+  width: 150px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#mainCard:hover {
+  box-shadow: 0 10px 18px 0 rgba(0, 0, 0, 0.24),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
