--- a/client/src/components/main-stats/main_stats.css
+++ b/client/src/components/main-stats/main_stats.css
@@ -47,3 +47,10 @@ li {
   box-shadow: 0 10px 18px 0 rgba(0, 0, 0, 0.24),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+@media only screen and (max-width: 600px) {
+  #createuser {
+
+    
+  } 
+}
