--- a/client/src/components/main-stats/main_stats.css
+++ b/client/src/components/main-stats/main_stats.css
@@ -5,10 +5,12 @@
   z-index: 9;
   font-family: "Kalam", cursive;
   color: rgb(0, 48, 14);
-  margin-top: 10vh;
+  margin-top: 15vh;
 }
 
 .logoutBtn {
+  margin-left: 0px;
+  margin-top: 25px; 
   float: right;
 }
 
@@ -25,6 +27,8 @@ h6 {
   margin-top: 5vh;
   margin-bottom: 30vh;
   overflow-y: scroll;
+  width: 300px;
+  height: 100px
 }
 
 li {
@@ -49,8 +53,16 @@ li {
 }
 
 @media only screen and (max-width: 600px) {
-  #createuser {
+  #mainCard {
+    margin-top: 10vh;
+    width: 100px;
+    margin-left: 20px
+  }
 
-    
-  } 
+  #houseMembers {
+    margin-top: 5vh;
+    margin-bottom: 30vh;
+    overflow-y: scroll;
+    width: 50px;
+  }
 }
