--- a/client/src/components/fight/fight.css
+++ b/client/src/components/fight/fight.css
@@ -7,11 +7,14 @@
 }
 
 .withdrawBtn {
+  margin-left: 0px;
+  margin-top: 25px; 
   float: right;
 }
 
 #fightBtn {
-  margin-top: 35vh;
+  margin-top: 40vh;
+  
 }
 
 #letterBtn {
