--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -1,14 +1,23 @@
-#loginaside {
+##loginaside {
   position: absolute;
-  top: 40vh;
-  left: 25vw;
-  right: 25vw;
-  bottom: 12vw;
+  top: 30vh;
+  left: 30vw;
+  right: 30vw;
+  bottom: 5vw;
   background-color: rgba(255,255,255,0.5);
   text-align: center;
   padding: 20px;
-  z-index: 9
+  z-index: 9;
+  font-family: "Kalam", cursive;
+  color: rgb(202, 41, 41);
 }
+/* #loginaside {
+  margin-top: 12vh;
+  background-color: rgba(255,255,255,0.5);
+  text-align: center;
+  padding: 25px;
+  z-index: 9
+} */
 
 #loginaside:hover {
   box-shadow: 0 10px 18px 0 rgba(0, 0, 0, 0.24),0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -63,14 +72,17 @@ p {
  p {
   font-size: 30px;
  }
- #loginaside {
-  position: absolute;
-  top: 35vh;
-  left: 15vw;
-  right: 15vw;
-  bottom: 50vw;
-  text-align: left;
-}
+  #loginaside {
+    position: absolute;
+    top: 20vh;
+    left: 3vw;
+    right: 5vw;
+    bottom: 60vw;
+    padding: 20px;
+    z-index: 9;
+    text-align: left;
+  }
+
 .btn {
   font-size: 13px;
   margin-left: 20px !important;
