--- a/client/src/components/main-stats/main_stats.css
+++ b/client/src/components/main-stats/main_stats.css
@@ -13,11 +13,12 @@
   text-align: center;
   font-family: "Kalam", cursive;
   color: rgb(0, 48, 14);
+  align-content: center;
 }
 
 #monsterInfo {
   color: lightblue;
-  text-align: left;
+  text-align: center;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
@@ -44,6 +45,7 @@
 
 h6 {
   margin-bottom: 3px;
+  text-align: left;
 }
 #houseMembers {
   background-color: rgba(255, 255, 255, 0.5);
@@ -72,7 +74,6 @@ li {
   color: lightblue;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   background-color: transparent;
-
 }
 
 #character {
@@ -85,6 +86,10 @@ li {
 #mainCard:hover {
   box-shadow: 0 10px 18px 0 rgba(0, 0, 0, 0.24),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#mainContainer {
+  align-content: center;
 }
 
 @media only screen and (max-width: 600px) {
