--- a/client/src/components/create-user/create_user.css
+++ b/client/src/components/create-user/create_user.css
@@ -12,6 +12,11 @@
     color: rgb(202, 41, 41);
   }
 
+  #centerText {
+text-align: center;
+padding-top: 10vh 
+  }
+
   #createuser:hover {
     box-shadow: 0 10px 18px 0 rgba(0, 0, 0, 0.24),0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
