--- a/client/src/components/main-stats/main_stats.css
+++ b/client/src/components/main-stats/main_stats.css
@@ -95,7 +95,8 @@ li {
 @media only screen and (max-width: 600px) {
   #mainCard {
     margin-top: 10vh;
-    width: 100px;
+    width: 50px;
+    height: 50px;
     margin-left: 20px;
   }
 
@@ -105,4 +106,6 @@ li {
     overflow-y: scroll;
     width: 50px;
   }
+
+
 }
