--- a/client/src/components/main-stats/main_stats.css
+++ b/client/src/components/main-stats/main_stats.css
@@ -17,7 +17,7 @@
 }
 
 #monsterInfo {
-  color: lightblue;
+  color: darkred;
   text-align: center;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
