--- a/client/src/components/main-stats/main_stats.css
+++ b/client/src/components/main-stats/main_stats.css
@@ -15,7 +15,9 @@
   color: rgb(0, 48, 14);
   align-content: center;
 }
-
+.main-monsterName{
+  font-size:25px;
+}
 #monsterInfo {
   color: darkred;
   text-align: center;
@@ -67,7 +69,7 @@ li {
 }
 
 #userInfo {
-  color: lightblue;
+  color: darkgreen;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
