--- a/client/src/components/fight/fight.css
+++ b/client/src/components/fight/fight.css
@@ -1,5 +1,9 @@
-#fightContainer {
-  margin-top: 100px;
+#fightMonster {
+  margin-top: 75px;
+}
+
+#fightavatar {
+  margin-top: 155px;
 }
 
 .wizard {
@@ -20,6 +24,7 @@ h3{
 }
 
 #monster {
+  padding: 0px;
   background-color: rgba(255, 255, 255, 0.5);
   text-align: left;
   font-family: "Kalam", cursive;
@@ -32,16 +37,17 @@ h3{
   float: right;
   background-color: rgb(131, 2, 2);
   color: white;
+
 }
 
 #fightBtn {
-  margin-top: 40vh;
   background-color: rgb(131, 2, 2);
   color: white;
+  margin-top: -20vh
 }
 
 #letterBtn {
-  margin-bottom: 50vh;
+  margin-bottom: 30vh;
   background-color: rgb(131, 2, 2);
   color: white;
 }
@@ -50,4 +56,13 @@ h3{
   #fightBtn {
     margin-top: 15vh;
   }
+  #wizard,
+  #monster {
+    width: 100px;
+  }
+
+  li{
+    font-size: 15px;
+  }
+  
 }
